--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,31 @@
   display: flex;
   justify-content: center;
 }
+.cv {
+  padding: 24px 0;
+}
+.cv h3 {
+  margin-bottom: 6px !important;
+  padding: 6px 0;
+}
+.info {
+  display: flex;
+}
 
+.info h2 {
+  margin: 0;
+}
+
+.avatar {
+  background: cornflowerblue;
+  height: 160px;
+  width: 120px;
+}
 .cv {
   height: 100%;
   width: 1000px;
 }
 
-.cv .header-title {
-  border-bottom: 1px solid black;
+.header-title {
+  border-bottom: 1px solid gray;
 }
