--- a/src/App.css
+++ b/src/App.css
@@ -7,27 +7,32 @@
   padding: 24px 0;
 }
 .cv h3 {
-  margin-bottom: 6px !important;
+  margin-bottom: 12px !important;
   padding: 6px 0;
 }
 .info {
   display: flex;
 }
 
-.info h1{
+.info h2{
   margin: 0;
 }
 
-.avatar {
-  background: cornflowerblue;
-  height: 160px;
-  width: 120px;
+/* .avatar { */
+  /* background: cornflowerblue; */
+  /* height: 180px; */
+  /* width: 120px; */
+/* } */
+.avatar img {
+  height: 162px;
+  width: 108px;
 }
+
 .cv {
   height: 100%;
   width: 1000px;
 }
 
 .header-title {
-  border-bottom: 1px solid gray;
+  border-bottom: 2px solid gray;
 }
