--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-
 #root {
   display: flex;
   justify-content: center;
@@ -14,14 +13,14 @@
   display: flex;
 }
 
-.info h2{
+.info h2 {
   margin: 0;
 }
 
 /* .avatar { */
-  /* background: cornflowerblue; */
-  /* height: 180px; */
-  /* width: 120px; */
+/* background: cornflowerblue; */
+/* height: 180px; */
+/* width: 120px; */
 /* } */
 .avatar img {
   height: 162px;
@@ -39,4 +38,8 @@
 .cv ul {
   margin: 0;
   margin-left: -22px;
+}
+
+li {
+  margin-bottom: 8px;
 }
